@@ -14,6 +14,7 @@ git - ?
 	- Russian translation of the interface
 	- Random VN link in menu
 	- Ignore some release fields when the patch status is checked
+	- Batch edit downloadable trial releases to add freeware status
 
 2.6 - 2009-08-09
 	- New screen resolutions: 1024x600 and 1600x1200
